# cli-todo-app-speckit

./: .gitignore  LICENSE  README.md  constitution-prompt.md  hello.py  plan-prompt.md  pyproject.toml  requirements.txt  specification-prompt.md
.claude/agents/: data-model-agent.md  feature-agent.md  setup-agent.md  test-agent.md  ui-agent.md
.github/: copilot-instructions.md
.specify/memory/: constitution.md
history/adr/: ADR-0001-cli-ui-framework-stack.md  ADR-0002-uv-package-manager-policy.md  ADR-0003-data-layer-architecture.md  ADR-0004-four-layer-application-architecture.md
history/prompts/001-retro-todo-app/: 0001-create-retro-todo-app-specification.spec.prompt.md  0002-clarify-retro-todo-specification.misc.prompt.md  0003-generate-retro-todo-implementation-plan.plan.prompt.md  (+2 more)
retro_todo/: __init__.py  app.py  main.py
retro_todo/database/: __init__.py  db.py  id_generator.py
retro_todo/models/: __init__.py  enums.py  todo.py
retro_todo/services/: __init__.py  todo_service.py
retro_todo/ui/: __init__.py  animations.py  prompts.py  splash.py  tables.py  theme.py
specs/001-retro-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_cli_commands.py  test_cli_extended.py
tests/integration/: __init__.py  test_database.py  test_main_commands.py  test_todo_service.py
tests/unit/: __init__.py  test_animations.py  test_enums.py  test_id_generator.py  test_models.py  test_prompts.py  test_prompts_extended.py  test_splash.py  test_tables.py
(+3 files in other folders)
